--- a/tex/roc.tex
+++ b/tex/roc.tex
@@ -16,8 +16,8 @@
 			grid style={dashed, gray!30},
 			ylabel near ticks,
 			xlabel near ticks,
-			xlabel=1 - Specificity,
-			ylabel=Sensitivity,
+			xlabel=FPR or (1 - Specificity),
+			ylabel=TPR or Sensitivity,
 			tick align=outside,
 			legend pos= south east,
 			legend style={font=\small, cells={align=left}}]
