--- a/tex/bvm.tex
+++ b/tex/bvm.tex
@@ -117,9 +117,9 @@ minimum height=1.3mm](PRE2)at([xshift=0mm,yshift=-0.2pt]PRE.north){};
     legend style={legend cell align=left, at={(-0.25,0.8)}}
     ]
     \addlegendimage{redd, thick}
-    \addlegendentry{IPPV Inspiration};
+    \addlegendentry{IPPV Expiration};
     \addlegendimage{greenn, thick}:
-    \addlegendentry{IPPV Expiration}:
+    \addlegendentry{IPPV Inspiration}:
     \end{axis}
 
 \end{tikzpicture}
